# Emotion-Detection

./: CMakeLists.txt  annotate.cpp  emotionRecognition.cpp  emotionRecognition4ClassProbablityOVA.cpp  emotionRecognition4ClassProbablityOVO.cpp  emotionRecognitionMulticlass.cpp  train.cpp  train4ClassProbablityOVA.cpp  train4ClassProbablityOVO.cpp  trainMulticlass.cpp
